traces/bug_150.txt
examples++-load/MUMPS_seq.cpp:122: error: DEAD_STORE
  The value written to &ierr (type int) is never used.
Showing all 1 steps of the trace


examples++-load/MUMPS_seq.cpp:122:5: Write of unused value
120.       char ** argv = 0;;
121.       ierr = MPI_Init(&argc, &argv);
122.       ierr = MPI_Comm_rank(MPI_COMM_WORLD, &myid);
           ^
123.   
124.       id.job=JOB_INIT;
